AX: VoiceOver doesn't speak the value of the meridiem component in time controls. https://bugs.webkit.org/show_bug.cgi?id=270243 rdar://problem/123781149

Reviewed by Chris Fleizach.

This patch makes the meridiem field a spinbutton and adds the
appropriate ARIA attributes so assistive technologies announce its
value.

* LayoutTests/accessibility/datetime/time-input-meridiem-expected.txt: Added.
* LayoutTests/accessibility/datetime/time-input-meridiem.html: Added.
* Source/WebCore/html/shadow/DateTimeFieldElements.cpp:
(WebCore::DateTimeMeridiemFieldElement::create):
(WebCore::DateTimeMeridiemFieldElement::updateAriaValueAttributes):
(WebCore::DateTimeMeridiemFieldElement::setValueAsDate):
(WebCore::DateTimeMeridiemFieldElement::setValueAsInteger):
(WebCore::DateTimeMeridiemFieldElement::setEmptyValue):
* Source/WebCore/html/shadow/DateTimeFieldElements.h:
* Source/WebCore/html/shadow/DateTimeSymbolicFieldElement.h:
* Source/WebCore/platform/LocalizedStrings.cpp:
(WebCore::AXTimeFieldMeridiemText): Deleted.
* Source/WebCore/platform/LocalizedStrings.h:

Canonical link: https://commits.webkit.org/276195@main